[tool.poetry]
name = "ipcv-assignment2"
version = "0.1.0"
description = ""
authors = ["DTufto <darrelltufto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
pytesseract = "^0.3.13"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
